--- a/Documentation/html/image_8cpp.html
+++ b/Documentation/html/image_8cpp.html
@@ -83,8 +83,7 @@ $(function() {
 </div><div class="textblock"><div class="dynheader">
 Include dependency graph for image.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="image_8cpp__incl.svg" width="438" height="262"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="image_8cpp__incl.svg" width="438" height="262"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="image_8cpp_source.html">Go to the source code of this file.</a></p>
@@ -150,8 +149,7 @@ Functions</h2></td></tr>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="image_8cpp_a4c8eae75340c523bdcb08cd1d371e2c0_icgraph.svg" width="306" height="38"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="image_8cpp_a4c8eae75340c523bdcb08cd1d371e2c0_icgraph.svg" width="306" height="38"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
